examples/errors/syntax_missing_varname.jc
// ================================================
// ERROR: Missing Variable Name
// Expected: [SyntaxError] Expected variable name after 'keep'
// ================================================

// Missing the variable name after keep
keep = "John";
